# plug-mobile

./: .dev.env  .eslintrc.js  .flowconfig  .gitignore  .npmrc  .prettierrc.js  .svgrrc  App.js  LICENSE  README.md  app.json  babel.config.js  cargo-config.toml.template  copy-patches.sh  create-ndk-standalone.sh  declarations.d.ts  index.d.ts  index.js  jsconfig.json  metro.config.js  package-lock.json  package.json  pull_request_template.md  react-native.config.js  reactotronConfig.js  rename-ic-agent.sh  rn-cli.config.js  shim.js  transformer.js  tsconfig.json
android/: build.gradle  gradle.properties  sentry.properties  settings.gradle
components/: AccountInfo.js  ActivityIcon.js  ActivityItem.js  BottomNavigator.js  Checkbox.js  Container.js  Divider.js  EmptyState.js  ErrorText.js  FallbackComponent.js  Header.js  InputField.js  Modal.js  TokenIcon.js  TokenItem.js  UserIcon.js
constants/: index.js  theme.js
helpers/: ErrorBoundary.js  LoaderHOC.js  TokenFormat.js  UsdFormat.js  utils.js
ios/: BridgingFile.swift  Plug-Bridging-Header.h  (+6 more)
rust/.cargo/mobile_app/: Cargo.toml  Makefile  copy-android.sh  copy_android.sh  set-env.sh  shell.nix
rust/.cargo/mobile_app/ic-agent/: Cargo.toml
rust/.cargo/mobile_app/ic-agent/src/: lib.rs
rust/.cargo/mobile_app/ic-agent/src/agent/: agent_config.rs  agent_error.rs  builder.rs  mod.rs  replica_api.rs  response.rs  response_authentication.rs  signed.rs
rust/.cargo/mobile_app/ic-utils/src/interfaces/: management_canister.rs
rust/.cargo/mobile_app/ref-tests/src/: utils.rs
rust/.cargo/mobile_app/src/: lib.rs
(+825 files in other folders)
